<resources>
    <string name="app_name">Gaucho Grub</string>

    <!-- Navigation drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="drawer_menus">Menus</string>
    <string name="drawer_favorites">Favorites</string>
    <string name="drawer_schedules">Schedules</string>
    <string name="drawer_swipes">Swipes</string>
    <string name="drawer_cams">DiningCams</string>

    <string name="drawer_category_settings">About and Settings</string>
    <string name="drawer_settings">Settings</string>
    <string name="drawer_test_notifications">Test Favorites Notifications</string>

    <string-array name="naviation_drawer_items">
        <item name="menus">@string/drawer_menus</item>
        <item name="favorites">@string/drawer_favorites</item>
        <item name="schedules">@string/drawer_schedules</item>
        <item name="swipes">@string/drawer_swipes</item>
        <item name="cams">@string/drawer_cams</item>
        <item name="settings">@string/drawer_settings</item>
        <item name="test_notifications">@string/drawer_test_notifications</item>
    </string-array>

    <!-- MainActivity -->
    <string name="MainActivity_dining_common_shared_prefs">currentDiningCommon</string>

    <!-- Appbar Actions -->
    <string name="action_settings">Settings</string>

    <!-- Menu Fragment -->
    <string name="MenuFragment_app_bar_title">Menu</string>
    <string name="MenuFragment_breakfast_string">Breakfast</string>
    <string name="MenuFragment_brunch_string">Brunch</string>
    <string name="MenuFragment_lunch_string">Lunch</string>
    <string name="MenuFragment_dinner_string">Dinner</string>
    <string name="MenuFragment_latenight_string">Late Night</string>

    <string-array name="MenuFragment_mealStrings">
        <item>@string/MenuFragment_breakfast_string</item>
        <item>@string/MenuFragment_brunch_string</item>
        <item>@string/MenuFragment_lunch_string</item>
        <item>@string/MenuFragment_dinner_string</item>
        <item>@string/MenuFragment_latenight_string</item>
    </string-array>

    <!-- Favorites Fragment -->
    <string name="FavoritesFragment_app_bar_title">Favorites</string>
    <!-- Schedules Fragment -->
    <string name="SchedulesFragment_app_bar_title">Schedule</string>
    <!-- Swipes Fragment -->
    <string name="SwipesFragment_app_bar_title">Swipes</string>
    <string name="swipes_url">https://webapps.ucen.ucsb.edu/plus/</string>
    <!-- Cams Fragment -->
    <string name="DiningCamsFragment_app_bar_title">Dining Cam</string>
    <!-- About Fragment -->
    <string name="AboutFragment_app_bar_title">About</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Dining Commons -->
    <string name="CAR">Carrillo</string>
    <string name="DLG">De La Guerra</string>
    <string name="ORT">Ortega</string>
    <string name="POR">Portola</string>
    <string-array name="dining_commons">
        <item name="CAR">@string/CAR</item>
        <item name="DLG">@string/DLG</item>
        <item name="ORT">@string/ORT</item>
        <item name="POR">@string/POR</item>
    </string-array>

    <!-- Dining Commons Value Array (for Settings) -->
    <string name="CAR_value">@string/CAR</string>
    <string name="DLG_value">@string/DLG</string>
    <string name="ORT_value">@string/ORT</string>
    <string name="POR_value">@string/POR</string>

    <string-array name="dining_commons_values">
        <item>@string/CAR_value</item>
        <item>@string/DLG_value</item>
        <item>@string/ORT_value</item>
        <item>@string/POR_value</item>
    </string-array>

    <!-- Dining Cams -->
    <string-array name="dining_cams">
        <item name="CAR">@string/CAR</item>
        <item name="DLG">@string/DLG</item>
        <item name="ORT">@string/ORT</item>
    </string-array>

    <string name="dining_cam_default">@string/DLG</string>
    <string name="dining_cam_description">Live feed of the dining commons exterior</string>
    <string name="dining_cam_no_portola">No feed available for Portola</string>

    <!-- Strings specific to Settings -->
    <string name="pref_key_default_dining_common">default_dining_common</string>
    <string name="pref_key_previously_open_dining_common">previously_open_switch</string>
    <string name="pref_key_default_filter">default_filter</string>
    <string name="pref_key_favorites_notification">favorites_notification_switch</string>

    <string name="pref_title_default_dining_common">Default Dining Common</string>
    <string name="pref_title_previously_open_dining_common">Previously Open Override</string>
    <string name="pref_title_favorites_notification">Favorites Notification</string>
    <string name="pref_title_default_filter">Default Filter for Menu</string>

    <string name="pref_summary_previously_open_dining_common">Override the default dining common with your previously open dining common</string>

    <!-- Human-readable Pref Strings -->
    <string name="pref_vegetarian">Only vegetarian</string>
    <string name="pref_vegan">Only vegan</string>
    <string name="pref_no_nuts">No nuts</string>

    <string-array name="pref_default_filter_entries">
        <item>@string/pref_vegetarian</item>
        <item>@string/pref_vegan</item>
        <item>@string/pref_no_nuts</item>
    </string-array>

    <string name="pref_vegetarian_value">ONLY_VEGETARIAN</string>
    <string name="pref_vegan_value">ONLY_VEGAN</string>
    <string name="pref_no_nuts_value">NO_NUTS</string>

    <string-array name="pref_default_filter_entry_values">
        <item>@string/pref_vegetarian_value</item>
        <item>@string/pref_vegan_value</item>
        <item>@string/pref_no_nuts_value</item>
    </string-array>

    <string-array name="pref_default_filter_default_values"/>
    <string name="pref_default_filter_no_filter">None</string>
    <!-- END Strings specific to Settings-->

    <!-- Strings for Parsing -->
    <string name="parsable_menu_url">https://appl.housing.ucsb.edu/menu/</string>

    <string name="parsable_CAR_id">Carrillo-collapse</string>
    <string name="parsable_DLG_id">DeLaGuerra-collapse</string>
    <string name="parsable_ORT_id">Ortega-collapse</string>
    <string name="parsable_POR_id">Portola-collapse</string>

    <string-array name="parsable_dining_commons_ids">
        <item>@string/parsable_CAR_id</item>
        <item>@string/parsable_DLG_id</item>
        <item>@string/parsable_ORT_id</item>
        <item>@string/parsable_POR_id</item>
    </string-array>

    <string name="parsable_bright_meal">Bright Meal</string>
    <string name="parsable_veg">(v)</string>
    <string name="parsable_vgn">(vgn)</string>
    <string name="parsable_has_nuts">(w/nuts)</string>
    <!-- END Strings for Parsing -->

    <!-- Schedule Fragment -->
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>

    <string-array name="days_of_week">
        <item>@string/monday</item>
        <item>@string/tuesday</item>
        <item>@string/wednesday</item>
        <item>@string/thursday</item>
        <item>@string/friday</item>
        <item>@string/saturday</item>
        <item>@string/sunday</item>
    </string-array>

</resources>
