<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_menus"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/drawer_menus" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/drawer_favorites" />
        <item
            android:id="@+id/nav_schedules"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/drawer_schedules" />
        <item
            android:id="@+id/nav_cams"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/drawer_cams" />
        <item
            android:id="@+id/nav_swipes"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/drawer_swipes" />
    </group>

    <item android:title="@string/drawer_category_settings">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@android:drawable/ic_menu_help"
                android:title="@string/drawer_settings" />
            <item
                android:id="@+id/nav_about"
                android:icon="@android:drawable/ic_menu_help"
                android:title="@string/drawer_about"/>
        </menu>
    </item>

</menu>
